--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <gcviewer.version>1.36</gcviewer.version>
         <swagger.version>3.0.0</swagger.version>
         <spotless.version>2.27.2</spotless.version>
-        <spring-data-elasticsearch.version>4.1.8</spring-data-elasticsearch.version>
+        <elasticsearch.version>7.17.9</elasticsearch.version>
         <java-jwt.version>4.2.2</java-jwt.version>
 
         <task-common.version>1.0-SNAPSHOT</task-common.version>
@@ -342,6 +342,18 @@
                 <version>${java-jwt.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+
             <!--Vulnerability version fixes-->
             <dependency>
                 <groupId>commons-beanutils</groupId>
@@ -372,11 +384,6 @@
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
                 <version>${velocity.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-elasticsearch</artifactId>
-                <version>${spring-data-elasticsearch.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.protobuf</groupId>
