update: docs add hadoop and database conf description

--- a/task-assembly/conf/application-hadoop.yml
+++ b/task-assembly/conf/application-hadoop.yml
@@ -6,7 +6,7 @@ hadoop:
       user: hdfs
       password:
       port: 8020
-      # log directory keyword identification，used by task-application
+      # scheduler platform hdfs log path keyword identification, used by task-application
       matchPathKeys: [ "flume" ]
 
   yarn:
