feat: compass_env supports configuring Redis and Elasticsearch password

--- a/task-parser/src/main/resources/application.yml
+++ b/task-parser/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     cluster:
       nodes: localhost:6379
       max-redirects: 3
+    password:
     lettuce:
       pool:
         max-active: 32
