--- a/task-application/src/main/resources/application-dolphinscheduler.yml
+++ b/task-application/src/main/resources/application-dolphinscheduler.yml
@@ -18,6 +18,7 @@ spring:
     cluster:
       nodes: localhost:6379
       max-redirects: 3
+    password:
     lettuce:
       pool:
         max-active: 32
