--- a/task-detect/src/main/resources/application.yml
+++ b/task-detect/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     cluster:
       nodes: localhost:6379
       max-redirects: 3
+    password:
     lettuce:
       pool:
         max-active: 32
