--- a/task-application/src/main/resources/application-hadoop.yml
+++ b/task-application/src/main/resources/application-hadoop.yml
@@ -3,7 +3,19 @@ hadoop:
     - nameservices: logs-hdfs
       namenodesAddr: [ "host1", "host2" ]
       namenodes: ["namenode1", "namenode2"]
+      # Optional
       user: hdfs
+      # Optional
       password:
       port: 8020
       matchPathKeys: [ "flume" ]
+      # kerberos
+      enableKerberos: false
+      # /etc/krb5.conf
+      krb5Conf: ""
+      # hdfs/*@EXAMPLE.COM
+      principalPattern:  ""
+      # admin
+      loginUser: ""
+      # /var/kerberos/krb5kdc/admin.keytab
+      keytabPath: ""
