--- a/task-ui/tsconfig.json
+++ b/task-ui/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "module": "ESNext",
     "target": "ESNext",
     "lib": ["DOM", "ESNext"],
@@ -25,5 +25,6 @@
       "~/*": ["src/*"]
     }
   },
+  "include": ["src/**/*.ts","src/**/*.d.ts","src/**/*.tsx","src/**/*.vue"],
   "exclude": ["dist", "node_modules", "cypress"]
 }
