--- a/task-flink/pom.xml
+++ b/task-flink/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>task-flink</artifactId>
     <name>task-flink</name>
     <dependencies>
+
         <dependency>
             <groupId>com.oppo.cloud</groupId>
             <artifactId>task-mbg</artifactId>
@@ -29,6 +30,20 @@
         <dependency>
             <groupId>com.oppo.cloud</groupId>
             <artifactId>task-common</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.oppo.cloud</groupId>
+            <artifactId>task-flink-core</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
