--- a/task-portal/pom.xml
+++ b/task-portal/pom.xml
@@ -21,6 +21,20 @@
         </dependency>
         <dependency>
             <groupId>com.oppo.cloud</groupId>
+            <artifactId>task-flink-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.oppo.cloud</groupId>
             <artifactId>task-ui</artifactId>
         </dependency>
         <dependency>
