--- a/task-portal/src/main/resources/application.yml
+++ b/task-portal/src/main/resources/application.yml
@@ -87,5 +87,7 @@ custom:
     expireDay: 15
     secret: 8ff3bf2c8344
 
-  flink:
-    diagnosisHost: http://localhost:7001
+diagnosis:
+  flinkPrometheusHost: http://localhost:9090
+  flinkPrometheusToken:
+  flinkPrometheusDatabase:
