--- a/task-application/src/main/resources/application-airflow.yml
+++ b/task-application/src/main/resources/application-airflow.yml
@@ -43,5 +43,5 @@ custom:
         - { "column": "task_name",data: "task_id=","regex": "(?<taskName>.*)", "name": "taskName" }
         - { "column": "retry_times",data: "attempt=", "regex": "(?<fileName>.*)", "name": "fileName" }
       extractLog: # 根据组装的日志路径解析日志
-        regex: "^.*Submitted application (?<applicationId>application_[0-9]+_[0-9]+).*$"     # 匹配规则
+        regex: ".*(?<applicationId>application_[0-9]+_[0-9]+).*$"     # 匹配规则
         name: "applicationId"      # 匹配文本名，最后必须有applicationId
