--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,7 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
