--- a/task-flink-core/pom.xml
+++ b/task-flink-core/pom.xml
@@ -69,5 +69,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
