--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,63 +1,90 @@
----
 name: Bug report
-about: Create a report to help us improve
-title: "[BUG]"
-labels: ''
-assignees: ''
-
----
-
-name: Bug Report
-description: File a bug report
+description: Create a bug report to help us improve Compass
 title: "[Bug]: "
-labels: ["bug", "triage"]
-projects: ["octo-org/1", "octo-org/44"]
+labels: [bug]
 assignees:
   - zebozhuang
+  - nilnon
+
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
+
   - type: input
     id: contact
     attributes:
       label: Contact Details
       description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      placeholder: your.email@example.com
     validations:
       required: false
-  - type: textarea
-    id: what-happened
+
+  - type: checkboxes
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
-    validations:
-      required: true
-  - type: dropdown
-    id: version
-    attributes:
-      label: Version
-      description: What version of our software are you running?
+      label: Is there an existing issue for this?
+      description: Please search to see if an issue already exists of the bug.
       options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
+      - label: I have searched all the existing issues
+        required: true
+
+  - type: dropdown
+    id: priority
+    attributes:
+      label: Priority
+      description: Which the priority you think?
+      options:
+        - low (Default)
+        - high
+        - fatal
       default: 0
     validations:
       required: true
+
   - type: textarea
-    id: logs
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
+      label: Current Behavior
+      description: A concise description of what you're experiencing.
+      placeholder: |
+        When I do <X>, <Y> happens and I see the error message attached below:
+        ```...```
+    validations:
+      required: true
+
+  - type: textarea
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+      label: Expected Behavior
+      description: A concise description of what you expected to happen.
+      placeholder: When I do <X>, <Z> should happen instead.
+    validations:
+      required: false
+
+  - type: textarea
+    attributes:
+      label: Steps To Reproduce
+      description: Steps to reproduce the behavior.
+      placeholder: |
+        1. Init environment ...
+        2. Install Compass with version ...
+        3. With those config ...
+        4. Then run this '...'
+        5. See error ...
+      render: markdown
+    validations:
+      required: false
+
+  - type: textarea
+    attributes:
+      label: Compass Log
+      description: Detailed error log information is helpful for finding problems.
+    validations:
+      required: false
+
+  - type: textarea
+    attributes:
+      label: Anything else? (Additional Context)
+      description: |
+        Links? References? Anything that will give us more context about the issue you are encountering!
+    validations:
+      required: false
