--- a/.github/ISSUE_TEMPLATE/custom.yml
+++ b/.github/ISSUE_TEMPLATE/custom.yml
@@ -8,3 +8,21 @@ body:
     attributes:
       value: |
         Thanks for taking the time to join Compass community!
+
+  - type: input
+    id: contact
+    attributes:
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: your.email@example.com
+    validations:
+      required: false
+
+  - type: textarea
+    attributes:
+      label: What would you like to ask or discuss?
+      description: A concise description of what you're asking/discussing.
+      placeholder: |
+        I would like to ask or discuss...
+    validations:
+      required: true
