Add mysql dependency for testing
Signed-off-by: wforget <643348094@qq.com>

--- a/task-application/pom.xml
+++ b/task-application/pom.xml
@@ -88,6 +88,11 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
