--- a/task-parser/pom.xml
+++ b/task-parser/pom.xml
@@ -99,6 +99,10 @@
             <artifactId>gcviewer</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
