--- a/task-mbg/src/main/resources/generator.properties
+++ b/task-mbg/src/main/resources/generator.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://10.177.162.27:33066/diagnose_data?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+jdbc.connectionURL=jdbc:mysql://localhost:33066/diagnose_data?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 jdbc.userId=root
 jdbc.password=Root@666
