--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,8 @@
         <spotless.version>2.27.2</spotless.version>
         <opensearch.version>1.3.12</opensearch.version>
         <java-jwt.version>4.2.2</java-jwt.version>
+        <derby.version>10.14.2.0</derby.version>
+        <testcontainers.version>1.19.0</testcontainers.version>
 
         <!--Vulnerability version fixes-->
         <velocity.version>1.7</velocity.version>
@@ -345,6 +347,26 @@
                 <groupId>org.opensearch</groupId>
                 <artifactId>opensearch-x-content</artifactId>
                 <version>${opensearch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>${derby.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>kafka</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <!--Vulnerability version fixes-->
