--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <spotless.version>2.27.2</spotless.version>
         <opensearch.version>1.3.12</opensearch.version>
         <java-jwt.version>4.2.2</java-jwt.version>
+        <assembly.skip>true</assembly.skip>
 
         <!--Vulnerability version fixes-->
         <velocity.version>1.7</velocity.version>
@@ -420,6 +421,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>dist</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <assembly.skip>false</assembly.skip>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
