--- a/task-canal-adapter/pom.xml
+++ b/task-canal-adapter/pom.xml
@@ -28,6 +28,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skipAssembly>${assembly.skip}</skipAssembly>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
                         <descriptor>src/assembly/assembly.xml</descriptor>
