--- a/task-detect/pom.xml
+++ b/task-detect/pom.xml
@@ -59,6 +59,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skipAssembly>${assembly.skip}</skipAssembly>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
