--- a/task-flink/pom.xml
+++ b/task-flink/pom.xml
@@ -82,6 +82,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skipAssembly>${assembly.skip}</skipAssembly>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
