--- a/task-metadata/pom.xml
+++ b/task-metadata/pom.xml
@@ -53,6 +53,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skipAssembly>${assembly.skip}</skipAssembly>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
