--- a/task-syncer/pom.xml
+++ b/task-syncer/pom.xml
@@ -75,6 +75,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skipAssembly>${assembly.skip}</skipAssembly>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
