Move WithRedisServer to task-common and make task-metadata module execute `mvn test` successfully
Signed-off-by: wforget <643348094@qq.com>

--- a/task-application/pom.xml
+++ b/task-application/pom.xml
@@ -102,10 +102,16 @@
         </dependency>
         <dependency>
             <groupId>com.oppo.cloud</groupId>
-            <artifactId>task-mbg</artifactId>
+            <artifactId>task-common</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.springfox</groupId>
+                    <artifactId>springfox-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
