--- a/task-parser/src/test/resources/application.yml
+++ b/task-parser/src/test/resources/application.yml
@@ -8,9 +8,7 @@ spring:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
   datasource:
-    url: jdbc:mysql://localhost:33066/compass?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
+    url: jdbc:derby:memory:compass;create=true
     druid:
       initial-size: 5
       min-idle: 10
