--- a/task-application/src/main/resources/application-airflow.yml
+++ b/task-application/src/main/resources/application-airflow.yml
@@ -32,16 +32,16 @@ custom:
     processing: "{lua}:task-processing"
     delayedSeconds: 5
     tryTimes: 20
-  # 从上到下串行执行解析到任务的applicationId
+  # parse through to the task's Application ID serially from top to bottom
   rules:
-    - logPathDep: # 日志依赖查询
-        query: ""    # 变量依赖查询
-      logPathJoins: # 拼接日志绝对路径
-        - { "column": "", "data": "/flume/airflow" } # 配置存储调度日志的hdfs根目录
+    - logPathDep: # log dependency query
+        query: ""    # variable dependency query
+      logPathJoins: # concatenate log absolute path
+        - { "column": "", "data": "/flume/airflow" } # configure the HDFS root directory for storing scheduled logs
         - { "column": "flow_name",data: "dag_id=", "regex": "(?<flowName>.*)","name": "flowName" }
         - { "column": "run_id",data: "run_id=", "regex": "(?<runId>.*)", "name": "runId" }
         - { "column": "task_name",data: "task_id=","regex": "(?<taskName>.*)", "name": "taskName" }
         - { "column": "retry_times",data: "attempt=", "regex": "(?<fileName>.*)", "name": "fileName" }
-      extractLog: # 根据组装的日志路径解析日志
-        regex: ".*(?<applicationId>application_[0-9]+_[0-9]+).*$"     # 匹配规则
-        name: "applicationId"      # 匹配文本名，最后必须有applicationId
+      extractLog: # parse logs based on the assembled log path
+        regex: ".*(?<applicationId>application_[0-9]+_[0-9]+).*$"     # matching rules
+        name: "applicationId"      # match text name, must end with application ID
