--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-*.java text eol=lf
-*.sh text eol=lf
-*.xml text eol=lf
-*.yml text eol=lf
-*.md text eol=lf
+# Always check-out & check-in with LF line endings
+* text=auto eol=lf
+# Do not modify line endings for binary files
+*.png binary
+*.jpg binary
