update: task-ui comment

--- a/task-ui/nginx.conf
+++ b/task-ui/nginx.conf
@@ -1,5 +1,5 @@
 server {
-  listen 9804; # 端口号不要小于1024
+  listen 9804; # Port number must be greater than or equal to 1024.
 
   root /home/service/app/compass-ui/dist;
 
