--- a/docker/playground/compose.yml
+++ b/docker/playground/compose.yml
@@ -54,38 +54,38 @@ services:
     ports:
       - 9200:9200
 
-  minio:
-    image: bitnami/minio:2023-debian-11
-    environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: minio_minio
-      MINIO_DEFAULT_BUCKETS: spark-bucket,iceberg-bucket
-    container_name: minio
-    hostname: minio
-    ports:
-      - 9000
-      - 9001:9001
-
-  metastore:
-    build:
-      context: ./dockerfiles
-      dockerfile: compass-playground-hadoop.Dockerfile
-      args:
-        AWS_JAVA_SDK_VERSION: ${AWS_JAVA_SDK_VERSION}
-        HADOOP_VERSION: ${HADOOP_VERSION}
-        HIVE_VERSION: ${HIVE_VERSION}
-        APACHE_MIRROR: ${APACHE_MIRROR}
-        MAVEN_MIRROR: ${MAVEN_MIRROR}
-    container_name: metastore
-    hostname: metastore
-    ports:
-      - 9083
-    volumes:
-      - ./conf/core-site.xml:/etc/hadoop/conf/core-site.xml
-      - ./conf/hive-site.xml:/etc/hive/conf/hive-site.xml
-    depends_on:
-      - minio
-      - postgres
+#  minio:
+#    image: bitnami/minio:2023-debian-11
+#    environment:
+#      MINIO_ROOT_USER: minio
+#      MINIO_ROOT_PASSWORD: minio_minio
+#      MINIO_DEFAULT_BUCKETS: spark-bucket,iceberg-bucket
+#    container_name: minio
+#    hostname: minio
+#    ports:
+#      - 9000
+#      - 9001:9001
+#
+#  metastore:
+#    build:
+#      context: ./dockerfiles
+#      dockerfile: compass-playground-hadoop.Dockerfile
+#      args:
+#        AWS_JAVA_SDK_VERSION: ${AWS_JAVA_SDK_VERSION}
+#        HADOOP_VERSION: ${HADOOP_VERSION}
+#        HIVE_VERSION: ${HIVE_VERSION}
+#        APACHE_MIRROR: ${APACHE_MIRROR}
+#        MAVEN_MIRROR: ${MAVEN_MIRROR}
+#    container_name: metastore
+#    hostname: metastore
+#    ports:
+#      - 9083
+#    volumes:
+#      - ./conf/core-site.xml:/etc/hadoop/conf/core-site.xml
+#      - ./conf/hive-site.xml:/etc/hive/conf/hive-site.xml
+#    depends_on:
+#      - minio
+#      - postgres
 
   dolphinscheduler-schema-initializer:
     image: apache/dolphinscheduler-tools:3.1.8
@@ -168,3 +168,16 @@ services:
     depends_on:
       - postgres
       - zookeeper
+
+  compass:
+    build:
+      context: ./
+      dockerfile: dockerfiles/compass.Dockerfile
+    profiles: ["compass"]
+    tty: true
+    depends_on:
+      - postgres
+      - zookeeper
+      - kafka
+      - redis
+      - elasticsearch
