--- a/task-mbg/src/main/resources/generator.properties
+++ b/task-mbg/src/main/resources/generator.properties
@@ -1,4 +1,6 @@
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://localhost:33066/diagnose_data?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+jdbc.connectionURL=jdbc:mysql://localhost:33066/compass?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 jdbc.userId=root
 jdbc.password=Root@666
+autoDelimitKeywords=false # true for mysql, false for postgresql
+tableName=task_diagnosis_advice
