--- a/task-application/src/main/resources/application-dolphinscheduler.yml
+++ b/task-application/src/main/resources/application-dolphinscheduler.yml
@@ -36,7 +36,7 @@ custom:
   # parse through to the task's application ID serially from top to bottom
   rules:
     - logPathDep: # log dependency query
-        query: "select CASE WHEN end_time IS NOT NULL THEN DATE_ADD(end_time, INTERVAL 1 second) ELSE start_time END as end_time,log_path from t_ds_task_instance where id=${id}"     # 查询, id 是 task-instance表的id
+        query: "SELECT CASE WHEN end_time IS NOT NULL THEN end_time ELSE start_time END as end_time,log_path FROM t_ds_task_instance WHERE id=${id}"     # task-instance id
       logPathJoins: # compose log path
         # end_time: 2023-02-18 01:43:11
         # log_path: ../logs/6354680786144_1/3/4.log
