--- a/task-canal-adapter/src/main/adapter/conf/application.yml
+++ b/task-canal-adapter/src/main/adapter/conf/application.yml
@@ -28,9 +28,9 @@ canal.conf:
 
   srcDataSources:
     defaultDS:
-      url: ${CANAL_ADAPTER_SOURCE_MYSQL_URL}
-      username: ${CANAL_ADAPTER_SOURCE_MYSQL_USERNAME}
-      password: ${CANAL_ADAPTER_SOURCE_MYSQL_PASSWORD}
+      url: ${CANAL_ADAPTER_SOURCE_DATASOURCE_URL}
+      username: ${CANAL_ADAPTER_SOURCE_DATASOURCE_USERNAME}
+      password: ${CANAL_ADAPTER_SOURCE_DATASOURCE_PASSWORD}
 
   canalAdapters:
   - instance: mysqldata # canal instance Name or mq topic name
@@ -40,7 +40,7 @@ canal.conf:
       - name: rdb
         key: mysql1
         properties:
-          jdbc.driverClassName: com.mysql.jdbc.Driver
-          jdbc.url: ${CANAL_ADAPTER_DESTINATION_MYSQL_URL}
-          jdbc.username: ${CANAL_ADAPTER_DESTINATION_MYSQL_USERNAME}
-          jdbc.password: ${CANAL_ADAPTER_DESTINATION_MYSQL_PASSWORD}
+          #jdbc.driverClassName: com.mysql.jdbc.Driver
+          jdbc.url: ${CANAL_ADAPTER_DESTINATION_DATASOURCE_URL}
+          jdbc.username: ${CANAL_ADAPTER_DESTINATION_DATASOURCE_USERNAME}
+          jdbc.password: ${CANAL_ADAPTER_DESTINATION_DATASOURCE_PASSWORD}
