--- a/task-gpt/pom.xml
+++ b/task-gpt/pom.xml
@@ -19,6 +19,10 @@
     <dependencies>
         <dependency>
             <groupId>com.oppo.cloud</groupId>
+            <artifactId>task-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.oppo.cloud</groupId>
             <artifactId>task-mbg</artifactId>
             <exclusions>
                 <exclusion>
