feature: task-parser send other error log to gpt

--- a/task-parser/src/main/resources/application.yml
+++ b/task-parser/src/main/resources/application.yml
@@ -36,6 +36,9 @@ spring:
     gc-prefix: "compass-gc-log-"
     job-prefix: "compass-job-analysis-"
     task-app-prefix: "compass-task-app-"
+  kafka:
+    bootstrap-servers: "localhost:9092"
+    topic: "task-gpt"
 
 custom:
   redisConsumer:
