--- a/task-parser/pom.xml
+++ b/task-parser/pom.xml
@@ -140,6 +140,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
