--- a/task-gpt/src/main/resources/application.yml
+++ b/task-gpt/src/main/resources/application.yml
@@ -16,11 +16,15 @@ spring:
   kafka:
     #    bootstrap-servers: "localhost:9095"
     bootstrap-servers: "ht-diagnose-task-kafka.global.yyyvmc.kafka.oppo.local:9095,ht-diagnose-task-kafka.global.yyyqmc.kafka.oppo.local:9095,ht-diagnose-task-kafka.global.yyycmc.kafka.oppo.local:9095"
+    listener:
+      type: batch # enable batch to consume.
+      ack-mode: MANUAL_IMMEDIATE
     match-consumer:
-      topics: "exception-log"
+      #      topics: "exception-log"
+      topics: "report-other-error-log"
       group-id: "cp-task-gpt-match"
       auto:
-        start: false
+        start: true
     aggregate-consumer:
       topics: "drain-log"
       group-id: "cp-task-gpt-aggregate"
@@ -73,3 +77,11 @@ drain:
 template:
   reload:
     cron: "*/10 * * * * ?"
+
+chatgpt:
+  enable: true
+  apiKeys: sk-xxx1,sk-xxx2
+  proxy: "https://proxy" # keep empty if no proxy
+  model: "gpt-3.5-turbo"
+  prompt: "你是一位资深大数据专家，教导初始者，我会给你一些异常，你将提供异常的解决方案"
+#  prompt: "You are a senior expert in big data, teaching beginners. I will give you some anomalies and you will provide solutions to them."
